--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,10 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
-chrono = { version = "0.4.41", features = ["serde"] }
 dioxus = { version = "0.7.0-rc.0", features = ["router"] }
 serde_json = "1.0.143"
 dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
-time = { version = "0.3.41", features = ["serde"] }
+time = { version = "0.3.41", features = ["serde", "local-offset"] }
 
 [features]
 default = ["desktop"]
