--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,14 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
-dioxus = { version = "0.7.0-rc.0", features = ["router"] }
+dioxus = { version = "0.6.3", features = ["router"] }
 serde_json = "1.0.143"
-dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
-time = { version = "0.3.41", features = ["serde", "local-offset"] }
+time = { version = "0.3.41", features = [
+    "serde",
+    "local-offset",
+    "macros",
+    "parsing",
+] }
 
 [features]
 default = ["desktop"]
