--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ time = { version = "0.3.41", features = [
     "macros",
     "parsing",
 ] }
+dioxus-desktop = "0.6.3"
 
 [features]
 default = ["desktop"]
